# attestationSchema

./: main.py  pyproject.toml
data/: prompt.json  run_data.json  sample_inputs.json  updated_prompt.json
langfuse/: evaluate.py  generate_dataset.py  load_dataset.py  prompt-generator-v2.py  prompt-generator.py  save_prompt.py
typescript/: attestationSchemas.js  attestationSchemas.json  exportSchemas.js  types.d.ts
